<?xml version="1.0" encoding="utf-8"?>
<!--24 April 2022-->
<!--10119200-->
<!--Muhammad Jafar Shidik-->
<!--IF-5-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/backgroundLightBlue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyAccountActivity">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/textColorWhite36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/verify_your_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDesc"
        style="@style/textColorLightWhite16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/verify_account_desc"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <EditText
        android:id="@+id/edtVerification"
        style="@style/edtLightWhite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/edt_verify_desc"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDesc" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSend"
        style="@style/btnBorderWhite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtVerification" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/btnSend"
        app:layout_constraintStart_toStartOf="@+id/btnSend"
        app:layout_constraintTop_toBottomOf="@+id/btnSend">

        <TextView
            style="@style/textColorLightWhite16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/does_not_get_the_code" />

        <TextView
            android:id="@+id/tvResend"
            style="@style/textColorWhite16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:text="@string/resend"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>