<?xml version="1.0" encoding="utf-8"?>
<!--24 April 2022-->
<!--10119200-->
<!--Muhammad Jafar Shidik-->
<!--IF-5-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/backgroundLightBlue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlmostThereActivity">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/textColorWhite36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/almost_there"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        style="@style/textColorLightWhite16"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/almost_there_desc"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnVerify"
        style="@style/btnBorderWhite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:text="@string/verify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDesc" />
</androidx.constraintlayout.widget.ConstraintLayout>